--- a/server/sonar-web/src/main/less/components/page.less
+++ b/server/sonar-web/src/main/less/components/page.less
@@ -17,6 +17,14 @@
   .box-sizing(border-box);
 }
 
+.page-wrapper-global {
+  padding-top: @navbarGlobalHeight;
+}
+
+.page-wrapper-context {
+  padding-top: @navbarGlobalHeight + @navbarContextHeight;
+}
+
 .page-header {
   .clearfix;
   margin-bottom: 10px;
