--- a/server/sonar-web/src/main/less/components/ui.less
+++ b/server/sonar-web/src/main/less/components/ui.less
@@ -466,6 +466,7 @@ input[type=button] {
 }
 
 .nav-tabs {
+  padding-top: 1px;
   border-bottom: 1px solid @barBorderColor;
 
   > li {
